--- a/app/assets/stylesheets/rooms.scss
+++ b/app/assets/stylesheets/rooms.scss
@@ -1,3 +1,62 @@
 // Place all the styles related to the rooms controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+h5 {
+  padding-bottom: 8px;
+  padding-top: 20px;
+}
+.radio-btn-group {
+  display: flex;
+  
+  .radio {
+    margin: 0 .25rem;
+    
+    label {
+      background: #fff;
+      border: 1px solid #ddd;
+      padding: .5rem 1.25rem;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: box-shadow 400ms ease;
+      
+      &:hover {
+        box-shadow: 0 2px 5px 0 rgba(0,0,0,0.16), 0 2px 10px 0 rgba(0,0,0,0.12);
+      }
+    }
+
+    .check {
+      background: #fff;
+      border: 1px solid #ddd;
+      padding: .5rem 1.25rem;
+      border-radius: 5px;
+      cursor: pointer;
+      transition: box-shadow 400ms ease;
+    }
+    
+    input[type="radio"] {
+      display: none;
+    }
+    
+    input[type="radio"]:checked + label {
+      background: #2196F3;
+      color: #fff;
+      border-color: #2196F3;
+    }
+
+    input[type="checkbox"] {
+      /*display: none;*/
+    }
+    
+    input[type="checkbox"]:checked + .check {
+      background: #2196F3;
+      color: #fff;
+      border-color: #2196F3;
+    }
+    input[type="checkbox"]:checked + label {
+      background: #2196F3;
+      color: #fff;
+      border-color: #2196F3;
+    }
+  }
+}
