--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -31,46 +31,67 @@
     </div>
   <% end %>
   <h3>House Rules</h3>
-  <% HouseRule.all.each do |house_rule| %>
-    <div class="checkbox-inline">
-      <%= check_box_tag "room[house_rule_ids][]", house_rule.id %>
-      <%= house_rule.name %><br />
-    </div>
-  <% end %>
+  <div class="radio-btn-group">
+    <% HouseRule.all.each do |house_rule| %>
+      <div class="checkbox-inline radio">
+        <%= check_box_tag "room[house_rule_ids][]", house_rule.id %>
+        <div class="check"><%= house_rule.name %><br /></div>
+      </div>
+    <% end %>
+  </div>
+
   <h3>Room Amenities</h3>
-  <% RoomAmenity.all.each do |room_amenity| %>
-    <div class="checkbox-inline">
-      <%= check_box_tag "room[room_amenity_ids][]", room_amenity.id %>
-      <%= room_amenity.name %><br />
-    </div>
-  <% end %>
+  <div class="radio-btn-group">
+    <% RoomAmenity.all.each do |room_amenity| %>
+      <div class="checkbox-inline radio">
+        <%= check_box_tag "room[room_amenity_ids][]", room_amenity.id %>
+        <div class="check"> <%= room_amenity.name %><br /></div>
+      </div>
+    <% end %>
+  </div>
+
   <h3>About Property</h3>
   <%= f.fields_for :about_property do |v| %>
-    <div class="form-group">
-        <%= v.collection_radio_buttons(:property_type, AboutProperty.property_types, :first, :first)%>
-    </div>
 
-    <h5>Number of Rooms</h5>
-    <% 1.upto(10) do |i| %>
-      <%= v.label :numb_rooms, i %>
-      <%= v.radio_button :numb_rooms, i %>&nbsp;&nbsp;
-    <% end %> 
+      <h5>Rooms Available</h5>
+      <div class="radio-btn-group">
+        <div class="radio">
+          <%= v.collection_radio_buttons(:property_type, AboutProperty.property_types, :first, :first)%>
+        </div>
+      </div>
 
-    <h5>Number of Bathrooms</h5>
-    <div class="form-group">
-    <% 1.upto(10) do |i| %>
-      <%= v.label :numb_bathrooms, i %>
-      <%= v.radio_button :numb_bathrooms, i %>&nbsp;&nbsp;
-    <% end %>
-    </div>
 
-    <h5>Rooms Available</h5>
-    <div class="form-group">
-      <% 1.upto(10) do |i| %>
-        <%= v.label :rooms_avail, i %>
-        <%= v.radio_button :rooms_avail, i %>&nbsp;&nbsp;
-      <% end %>
-    </div>
+      <h5>Number of Rooms</h5>
+      <div class="radio-btn-group">
+          <% 1.upto(10) do |i| %>
+          <div class="radio">
+            <%= v.radio_button :numb_rooms, i, id: "numrooms-#{i}" %>
+            <%= v.label :numb_rooms, i, for: "numrooms-#{i}"  %>
+          </div>
+          <% end %> 
+      </div>
+
+      <h5>Number of Bathrooms</h5>
+      <div class="radio-btn-group">
+          <% 1.upto(10) do |i| %>
+          <div class="radio">
+            <%= v.radio_button :numb_bathrooms, i, id: "numbaths-#{i}" %>
+            <%= v.label :numb_bathrooms, i, for: "numbaths-#{i}" %>
+          </div>
+          <% end %> 
+      </div>
+
+      <h5>Rooms Available</h5>
+      <div class="radio-btn-group">
+        <% 1.upto(10) do |i| %>
+          <div class="radio">
+            <%= v.radio_button :rooms_avail, i, id: "roomsavail-#{i}" %>
+            <%= v.label :rooms_avail, i, for: "roomsavail-#{i}" %>
+          </div>
+        <% end %> 
+      </div>
+
+
   <% end %>
   <h3>About Room</h3>
   <%= f.fields_for :about_room do |l| %>
@@ -78,9 +99,11 @@
         <%= l.label :monthly_rent %>
         <%= l.text_field :monthly_rent %>
     </div>
-    <div class="form-group">
-        <%= l.label :add_utility_cost %>
-        <%= l.check_box :add_utility_cost %>
+    <div class="radio-btn-group">
+      <div class="radio">
+        <%= l.check_box :add_utility_cost, id: "cost" %>
+        <%= l.label :add_utility_cost, for: "cost" %>
+      </div>
     </div>
     <div class="form-group">
         <%= l.collection_radio_buttons(:room_type, AboutRoom.room_types, :first, :first)%>
@@ -101,29 +124,44 @@
         <%= l.text_field :min_stay %>
     </div>
   <% end %>
-  <h3>Housemate</h3>
-  <%= f.fields_for :housemate do |n| %>
-    <div class="field">
-      <% 1.upto(10) do |i| %>
-        <%= n.label :numb_current_mates, i %>
-        <%= n.radio_button :numb_current_mates, i %>&nbsp;&nbsp;
-      <% end %>
+
+<h3>Housemate</h3>
+<%= f.fields_for :housemate do |n| %>
+
+<h5>Number of current Housemates</h5>
+<div class="radio-btn-group">
+    <% 1.upto(10) do |i| %>
+    <div class="radio">
+      <%= n.radio_button :numb_current_mates, i, id: "numbmates-#{i}" %>
+      <%= n.label :numb_current_mates, i, for: "numbmates-#{i}" %>
     </div>
-    <div class="field">
-        <%= n.collection_radio_buttons(:pref_gender, Housemate.pref_genders, :first, :first)%>
+    <% end %> 
+</div>
+
+<h5>Preferred Gender</h5>
+<div class="radio-btn-group">
+    <div class="radio">
+      <%= n.collection_radio_buttons(:pref_gender, Housemate.pref_genders, :first, :first)%>
     </div>
-    <div class="field">
-        <%= n.collection_radio_buttons(:pref_occupation, Housemate.pref_occupations, :first, :first)%>
+</div>
+<h5>Preferred Occupation</h5>
+<div class="radio-btn-group">
+    <div class="radio">
+      <%= n.collection_radio_buttons(:pref_occupation, Housemate.pref_occupations, :first, :first)%>
     </div>
+</div>
+
+<h5>Preferred Age Min</h5>
     <div class="field">
         <%= n.label :pref_age_min %>
         <%= n.text_field :pref_age_min %>
     </div>
+<h5>Preferred Age Max</h5>
     <div class="field">
         <%= n.label :pref_age_max %>
         <%= n.text_field :pref_age_max %>
     </div>
-  <% end %>
+<% end %>
 
   <%= f.fields_for :room_images do |j| %>
    <% if j.object.new_record? %>
