--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -116,8 +116,12 @@
         <%= l.check_box :ensuite %>
     </div>
     <div class="form-group">
+      <div class='input-group date' id='datetimepicker1'>
         <%= l.label :avail_from %>
-        <%= l.text_field :avail_from %>
+        <%= l.text_field :avail_from, :class => 'form-control' %>
+        <span class="input-group-addon"><span class="glyphicon glyphicon-calendar"></span>
+        </span>
+      </div>
     </div>
     <div class="field">
         <%= l.label :min_stay %>
@@ -184,3 +188,57 @@
 </div>
 </div>
 </div>
+
+<script type="text/javascript">
+   $(function () {
+   var bindDatePicker = function() {
+    $(".date").datetimepicker({
+        format:'YYYY-MM-DD',
+      icons: {
+        time: "fa fa-clock-o",
+        date: "fa fa-calendar",
+        up: "fa fa-arrow-up",
+        down: "fa fa-arrow-down"
+      }
+    }).find('input:first').on("blur",function () {
+      // check if the date is correct. We can accept dd-mm-yyyy and yyyy-mm-dd.
+      // update the format if it's yyyy-mm-dd
+      var date = parseDate($(this).val());
+
+      if (! isValidDate(date)) {
+        //create date based on momentjs (we have that)
+        date = moment().format('YYYY-MM-DD');
+      }
+
+      $(this).val(date);
+    });
+  }
+   
+  var isValidDate = function(value, format) {
+    format = format || false;
+    // lets parse the date to the best of our knowledge
+    if (format) {
+      value = parseDate(value);
+    }
+
+    var timestamp = Date.parse(value);
+
+    return isNaN(timestamp) == false;
+   }
+   
+   var parseDate = function(value) {
+    var m = value.match(/^(\d{1,2})(\/|-)?(\d{1,2})(\/|-)?(\d{4})$/);
+    if (m)
+      value = m[5] + '-' + ("00" + m[3]).slice(-2) + '-' + ("00" + m[1]).slice(-2);
+
+    return value;
+   }
+   
+   bindDatePicker();
+ });
+</script>
+
+<script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
+<script src='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/moment.js/2.9.0/moment-with-locales.min.js'></script>
+<script src='http://cdnjs.cloudflare.com/ajax/libs/bootstrap-datetimepicker/3.1.3/js/bootstrap-datetimepicker.min.js'></script>
