--- a/app/views/rooms/show.html.erb
+++ b/app/views/rooms/show.html.erb
@@ -11,8 +11,14 @@
 </p>
 
 <p>
-  <strong>Location:</strong>
+  <strong>Suburb:</strong>
+  <%= @room.location.suburb %>
+  <strong>City:</strong>
   <%= @room.location.city %>
+  <strong>Province:</strong>
+  <%= @room.location.province %>
+  <strong>Country:</strong>
+  <%= @room.location.country %>
 </p>
 
 <strong>House Rules:</strong>
