--- a/app/views/rooms/_form.html.erb
+++ b/app/views/rooms/_form.html.erb
@@ -39,7 +39,7 @@
     </div>
     <div class="form-group">
         <%= d.label :country %>
-        <%= d.text_field :country, :class => 'form-control' %>
+        <%= d.country_select :country, :class => 'form-control' %>
     </div>
   <% end %>
   <h3>House Rules</h3>
